--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // worker with coroutine
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
+
     // navigation fragment
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
@@ -77,6 +80,8 @@ dependencies {
 
     //Dagger hilt
     implementation "com.google.dagger:hilt-android:2.44"
+    implementation 'androidx.hilt:hilt-work:1.0.0'
+    implementation 'androidx.hilt:hilt-common:1.0.0'
     kapt "com.google.dagger:hilt-compiler:2.44"
 
 
